--- a/css/estilos.css
+++ b/css/estilos.css
@@ -19,6 +19,8 @@ body {
 }
 .formulario{
     position: relative;
+	margin-left: 2.5em;
+
 }
 .titulo{
     text-align: center;
@@ -37,7 +39,7 @@ body {
     overflow: hidden;
 	margin-bottom: 10px;
     padding: 15px;
-    width: 80%;
+    width: 85%;
     resize: none;
     color: black;
 	border-radius: 10px;
